# cpp-calculator

./: CMakeLists.txt  main.cpp
model/constante/: Constante.cpp  Constante.h
model/expression/: Expression.cpp  Expression.h
model/expression/representation/: Representation.cpp  Representation.h
model/expression/representation/NC/: NC.cpp  NC.h
model/expression/representation/NPI/: NPI.cpp  NPI.h
model/operateur/: Operateur.cpp  Operateur.h
model/operation/: Operation.cpp  Operation.h
model/operations/: Operation.cpp
model/operations/addition/: Addition.cpp  Addition.h
model/operations/division/: Division.cpp  Division.h
model/operations/multiplication/: Multiplication.cpp  Multiplication.h
model/operations/soustraction/: Division.cpp  Soustraction.cpp  Soustraction.h
